final commit for the ld26

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>melonJS - Tutorial</title>
+		<title>Ludum Dare #26 - hekeri</title>
 	</head>
 	<body bgcolor="black">
 		<div id="info" style="width: 640px;">
